changed start/end time columns to strings instead of timestamps
